@startuml TemplatePattern
title AircraftWar - 模板模式 (Template Pattern)

skinparam dpi 150
skinparam wrapWidth 150
skinparam classAttributeIcon none
left to right direction

package edu.hitsz.application {
    abstract class AbstractGame {
        + action(): void
        # abstract loadDifficulty(): void
        # abstract spawnBoss(): void
        # abstract spawnEnemy(): void
        # abstract getEnemySpawnCycle(): double
        # abstract canSpawnBoss(): boolean
        # abstract getBossHp(): int
        # aircraftsMoveAction(): void
        # shootAction(): void
        # bulletsMoveAction(): void
        # crashCheckAction(): void
        # postProcessAction(): void
        # checkResultAction(): void
    }
    
    class EasyGame {
        # loadDifficulty(): void
        # spawnBoss(): void
        # spawnEnemy(): void
        # getEnemySpawnCycle(): double
        # canSpawnBoss(): boolean
        # getBossHp(): int
    }
    
    class NormalGame {
        # loadDifficulty(): void
        # spawnBoss(): void
        # spawnEnemy(): void
        # getEnemySpawnCycle(): double
        # canSpawnBoss(): boolean
        # getBossHp(): int
    }
    
    class HardGame {
        # loadDifficulty(): void
        # spawnBoss(): void
        # spawnEnemy(): void
        # getEnemySpawnCycle(): double
        # canSpawnBoss(): boolean
        # getBossHp(): int
    }
}

AbstractGame <|-- EasyGame
AbstractGame <|-- NormalGame
AbstractGame <|-- HardGame

@enduml
